# robot_ws

./: .gitignore  README.md
document/: BRANCHEMENTS_COMPLETS.md  ligne_de_commande.txt
install/: local_setup.sh  setup.sh
install/image_acquisition/lib/image_acquisition/: camera_node  yolo_detection_node
install/image_acquisition/share/image_acquisition/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/navigation/lib/navigation/: motor_node
install/navigation/share/navigation/: package.sh  package.xml
install/orchestration/share/orchestration/: package.bash  package.dsv  (+4 more)
log/: latest_build
src/image_acquisition/: package.xml  setup.cfg  setup.py
src/image_acquisition/image_acquisition/: camera_node.py  yolo_detection_node.py
src/navigation/: setup.py
src/navigation/launch/: robot.launch.py  robot_line.launch.py  test_lines.launch.py
src/navigation/navigation/: encoder_node.py  encoder_reader.py  line_follower_node.py  motor_node.py  navigation_line_node.py  navigation_node.py  test_calibration.py  test_follow_lines.py  test_motors.py  test_sequence_turn_left.py  test_sequence_turn_right.py  test_straight10cm.py  test_sync.py  test_turn90.py  test_wait_lines.py
src/navigation_fuzzy/: package.xml  setup.cfg  setup.py
src/navigation_fuzzy/launch/: navigation_fuzzy.launch.py  robot.launch.py
src/navigation_fuzzy/navigation/: encoder_node.py  encoder_reader.py  navigation_node.py  scan_gpio.py  test_fuzzy_speed.py  test_sync.py
src/navigation_fuzzy/navigation_fuzzy/: navigation_fuzzy_node.py
src/orchestration/: setup.py
(+1 files in other folders)
